# python_web_tutorial

./: .env.example  .gitignore  00_complete_tutorial.ipynb  00_complete_tutorial.py  README.md  TODO_MODULE12_UPDATE.md  __init__.py  docker-compose.yml  pyproject.toml  Плани Q&A сесій Python Core+Python Web - Web.csv
advanced_examples/: __init__.py
async_examples/: __init__.py
data/: init.sql  sample_data.sql
docs/: ADVANCED_README.md  CHEATSHEET.md  INDEX.md  LESSON_PLAN.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  START_HERE.md  improvement_plan.md
module_02/: INDEX.md  README.md
module_04/: INDEX.md  README.md
module_06/: 00_complete_tutorial.ipynb  Dockerfile  notebook.ipynb  requirements.txt
module_08/: .env.example  01_sqlalchemy_advanced.py  02_mongodb_advanced.py  03_caching_strategies.py  04_rabbitmq_messaging.py  05_realworld_data_science.py  ARCHITECTURE_OVERVIEW.txt  COMPANION_GUIDE.md  COMPLETION_REPORT.md  COMPREHENSIVE_GUIDE.md  DETAILED_LESSON_PLAN.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  STUDY_GUIDE.md  docker-compose.yml  requirements.txt
module_10/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
module_12/: AUTHORIZATION_AUDIT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  Module12_Complete_Learning_Path.ipynb  README.md  STRUCTURE_SUMMARY.txt
module_14/: INDEX.md  README.md
python_db/: 05_db_connection.py  06_jupyter_db_operations.ipynb  06_jupyter_db_operations.py  __init__.py
sql_examples/: 04_sql_examples.sql  __init__.py
tools/: __init__.py  (+1 more)
(+397 files in other folders)
